# cosmic-notifications

./: Cargo.toml  README.md  justfile
cosmic-notifications-config/: Cargo.toml
cosmic-notifications-config/src/: lib.rs
cosmic-notifications-util/: Cargo.toml
cosmic-notifications-util/src/: lib.rs
data/: com.system76.CosmicNotifications.desktop  com.system76.CosmicNotifications.metainfo.xml
debian/: install
src/: app.rs  main.rs
src/subscriptions/: applet.rs
