[package]
name = "cosmic-notifications-util"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["zbus_notifications"]
zbus_notifications = ["image", "zbus"]
image = ["fast_image_resize"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
serde = { version = "1.0", features = ["derive"] }
zbus = { version = "5.14.0", optional = true }
fast_image_resize = { version = "6.0.0", optional = true }
tl = { version = "0.7.8" }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "tokio",
] }
